--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
     <script src="https://unpkg.com/three@0.132.2/build/three.min.js"></script>
 </head>
 <body>
-    <div class="portfolio-item">tarakokko3233です! スクロールしてね</div>
+    <div class="portfolio-item">tarakokko3233です! 1番下までスクロールしてね</div>
     <div class="white-square">
         <h1>Portfolio Links</h1>
         <h2>各色の立方体をクリックしてね</h2>
