スマホ対応

--- a/index.html
+++ b/index.html
@@ -2,32 +2,34 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Self Introduction Animation</title>
     <style>
         body, html {
-            height: 300%;
+            height: 100%;
             margin: 0;
             overflow-y: scroll;
-            background: linear-gradient(135deg, #0f0c29, #302b63, #24243e); /* グラデーションを設定 */
+            background: linear-gradient(135deg, #0f0c29, #302b63, #24243e);
             color: #fff;
             font-family: 'Arial', sans-serif;
         }
         #scrollPrompt {
             position: fixed;
             top: 20%;
-            left: 20%;
+            left: 50%;
             transform: translate(-50%, -50%);
-            font-size: 24px;
+            font-size: 18px;
             color: #fff;
             z-index: 1000;
             display: none;
+            text-align: center;
         }
         #portfolio {
             position: fixed;
             top: 20px;
             left: 50%;
             transform: translateX(-50%);
-            font-size: 18px;
+            font-size: 16px;
             color: #000;
             z-index: 100;
             display: none;
@@ -37,6 +39,8 @@
             position: fixed;
             top: 0;
             left: 0;
+            width: 100%;
+            height: 100%;
         }
         #tooltip {
             display: none;
@@ -54,6 +58,7 @@
             margin: 20px;
             padding: 20px;
             border-radius: 10px;
+            text-align: center;
         }
         .bubble {
             display: none;
@@ -90,32 +95,30 @@
             text-align: center;
         }
         .white-square {
-        position: fixed;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        width: 80%;
-        max-width: 600px;
-        background-color: white;
-        padding: 20px;
-        border-radius: 10px;
-        display: none;
-        color: black;
-        text-align: center;
-    }
-
-    .white-square h1 {
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            width: 80%;
+            max-width: 400px;
+            background-color: white;
+            padding: 20px;
+            border-radius: 10px;
+            display: none;
+            color: black;
+            text-align: center;
+        }
+        .white-square h1 {
             font-size: 24px;
             margin-bottom: 10px;
         }
-
         .white-square h2 {
-            font-size: 24px;
+            font-size: 20px;
             margin-bottom: 15px;
         }
-
         .white-square p {
-            font-size: 18px;
+            font-size: 16px;
+            margin-bottom: 5px;
         }
     </style>
 
@@ -283,6 +286,25 @@ document.body.addEventListener('mousemove', (event) => {
         }
     });
 });
+
+function onTouchStart(event) {
+    event.preventDefault();
+    const touch = event.touches[0];
+    const mouse = new THREE.Vector2(
+        (touch.clientX / window.innerWidth) * 2 - 1,
+        -(touch.clientY / window.innerHeight) * 2 + 1
+    );
+    const raycaster = new THREE.Raycaster();
+    raycaster.setFromCamera(mouse, camera);
+    const intersects = raycaster.intersectObjects(linkMeshes);
+    if (intersects.length > 0) {
+        const url = intersects[0].object.userData.url;
+        window.open(url, '_blank');
+    }
+}
+
+renderer.domElement.addEventListener('click', onTouchStart);
+renderer.domElement.addEventListener('touchstart', onTouchStart);
 
 function animate() {
     requestAnimationFrame(animate);
