--- a/index.html
+++ b/index.html
@@ -177,9 +177,9 @@ loader.load('https://threejs.org/examples/fonts/helvetiker_regular.typeface.json
 function createLinks() {
     const linkData = [
         { url: 'https://tarakokko3233.github.io/', color: 0xFFFFFF, text: 'Portfolio' },
-        { url: 'https://twitter.com/tarakokko3233', color: 0x1DA1F2, text: 'Twitter' },
+        { url: 'https://twitter.com/tarakokko3233su', color: 0x1DA1F2, text: 'Twitter' },
         { url: 'https://github.com/tarakokko3233', color: 0x333333, text: 'GitHub' },
-        { url: 'https://qiita.com/tarakokko3233', color: 0x55C500, text: 'Qiita' },
+        { url: 'https://qiita.com/tarakokko3233', colorす: 0x55C500, text: 'Qiita' },
         { url: 'mailto:tarakokko3233@gmail.com', color: 0xE4405F, text: 'Email' },
     ];
     const offset = window.innerWidth / (linkData.length + 6);
